--- a/blog/app/views/articles/show.html.erb
+++ b/blog/app/views/articles/show.html.erb
@@ -1,2 +1,17 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
+
+<div>
+    <%= link_to "Home", articles_path %> |
+    <%= link_to "Edit", edit_article_path(@article) %> |
+    <%= link_to "Delete", article_path(@article), data: {
+                        turbo_method: :delete,
+                        turbo_confirm: "Are you sure?"
+                        } %>
+</div>
+
+<h2>Comments</h2>
+<%= render @article.comments %>
+
+<h2>Add a comment:</h1>
+<%= render 'comments/form' %>
